Fix z-index for nav and photo modal

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -9,8 +9,10 @@
   }
 }
 
-#nav {
-  z-index: 100;
+@media (max-width: $bpSmall - 1px) {
+  #nav {
+    z-index: 1;
+  }
 }
 
 #nav > div {
